# sterility-ai

./: README.md  compose.prod.yml  compose.yml  pyproject.toml
docker/: .dockerignore  Dockerfile
notebooks/: cleanup_dataset.ipynb  model_training.ipynb
scripts/: remove_duplicates.py
src/: app.py
tests/: test_remove_duplicates.py
